@@ -89,19 +89,18 @@ ERB
       if recipes.include? 'haml'
         # There is Haml code in this script. Changing the indentation is perilous between HAMLs.
         inject_into_file 'app/views/layouts/application.html.haml', :after => "%header\n" do <<-HAML
-          %nav
-            %ul.hmenu
-              = render 'shared/navigation'
+        %nav
+          %ul.hmenu
+            = render 'shared/navigation'
 HAML
         end
       else
-        inject_into_file 'app/views/layouts/application.html.erb', :after => "<header>\n" do
-  <<-ERB
-          <nav>
-            <ul class="hmenu">
-              <%= render 'shared/navigation' %>
-            </ul>
-          </nav>
+        inject_into_file 'app/views/layouts/application.html.erb', :after => "<header>\n" do <<-ERB
+        <nav>
+          <ul class="hmenu">
+            <%= render 'shared/navigation' %>
+          </ul>
+        </nav>
 ERB
         end
       end
@@ -109,8 +108,8 @@ ERB
       if recipes.include? 'haml'
         # There is Haml code in this script. Changing the indentation is perilous between HAMLs.
         inject_into_file 'app/views/layouts/application.html.haml', :after => "%body\n" do <<-HAML
-  %ul.hmenu
-    = render 'shared/navigation'
+    %ul.hmenu
+      = render 'shared/navigation'
 HAML
         end
       else
